--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:22.11.0-alpine
 
-WORKDIR /home/backend
+WORKDIR /apps/backend
 
 COPY package.json package-lock.json ./
 
@@ -11,5 +11,3 @@ COPY . .
 RUN npx prisma generate
 
 EXPOSE 8000
-
-CMD ["npm", "start"]
