--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:22.14.0-alpine
 
-WORKDIR /home/frontend
+WORKDIR /apps/frontend
 
 COPY package.json package-lock.json ./
 
@@ -8,8 +8,4 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
-
 EXPOSE 3000
-
-CMD ["npm", "start"]
